WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181992
Web Inspector: Window resizing is broken after detaching to separate window
https://bugs.webkit.org/show_bug.cgi?id=181992
Summary
Web Inspector: Window resizing is broken after detaching to separate window
Joseph Pecoraro
Reported
2018-01-23 10:36:57 PST
Window resizing is broken after detaching to separate window Steps to Reproduce: 1. Inspect <
http://webkit.org
> starting with a detached window 2. Attach to bottom 3. Detach 4. Attempt to resize the window => Broken UI Notes: • Resizing works at (1) but is broken at (4) • Attaching the window (2) changes the WKWebView's autoresizingMask • Restoring the autoresizingMask to the initial value behaves as expected
Attachments
[PATCH] Proposed Fix
(1.55 KB, patch)
2018-01-23 10:39 PST
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2018-01-23 10:37:10 PST
<
rdar://problem/36714840
>
Joseph Pecoraro
Comment 2
2018-01-23 10:39:42 PST
Created
attachment 332037
[details]
[PATCH] Proposed Fix I suppose an alternative fix would be to put this line in WebInspectorProxyMac::platformCreateFrontendWindow when the view gets added to the window, but I thought this location made more sense, since it balances the changes made in platformAttach with an equivalent property change in platformDetach.
Blaze Burg
Comment 3
2018-01-23 11:45:04 PST
Comment on
attachment 332037
[details]
[PATCH] Proposed Fix r=me
WebKit Commit Bot
Comment 4
2018-01-23 12:08:40 PST
Comment on
attachment 332037
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 332037 Committed
r227429
: <
https://trac.webkit.org/changeset/227429
>
WebKit Commit Bot
Comment 5
2018-01-23 12:08:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug