Web Inspector: Window resizing is broken after detaching to separate window https://bugs.webkit.org/show_bug.cgi?id=181992 <rdar://problem/36714840>

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2018-01-23
Reviewed by Brian Burg.

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::WebInspectorProxy::platformDetach):
Restore the inspector view's autoresizingMask to the initial value
that works with a detached window. This gets changed when the view
gets attached to bottom/side, so we need to revert it on detaching.

Canonical link: https://commits.webkit.org/197829@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@227429 268f45cc-cd09-0410-ab3c-d52691b4dbfc